--- a/CodificacionAdaptersListViewL3/app/src/main/res/layout/list_alarmas_template.xml
+++ b/CodificacionAdaptersListViewL3/app/src/main/res/layout/list_alarmas_template.xml
@@ -11,11 +11,13 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/txt_hora_alarma"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Title"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
         <TextView
+            android:id="@+id/txt_estado_alarma"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Subtitle"
