--- a/CodificacionAdaptersListViewL3/app/src/main/res/layout/activity_main.xml
+++ b/CodificacionAdaptersListViewL3/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     <TextView
         android:id="@+id/txt_main_title"
         android:layout_centerHorizontal="true"
-        android:layout_above="@id/block_of_buttons"
+        android:layout_above="@+id/block_of_buttons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
