CodificacionAdaptersListViewL3- button alarm updated

--- a/CodificacionAdaptersListViewL3/app/src/main/res/layout/activity_main.xml
+++ b/CodificacionAdaptersListViewL3/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/string_btn_alarma"/>
+            android:text="@string/string_btn_alarma"
+            android:onClick="onAlarmaButtonClicked"/>
 
         <Button
             android:id="@+id/btn_reproductor"
