--- a/NotificationBuildeL4/app/src/main/res/layout/activity_main.xml
+++ b/NotificationBuildeL4/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -8,10 +8,40 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.exercise.nextu.notificationbuildel4.MainActivity">
+    tools:context="com.exercise.nextu.notificationbuildel4.MainActivity"
+    android:orientation="vertical">
 
-    <TextView
+
+    <android.support.v7.widget.ButtonBarLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:layout_height="wrap_content">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/string_btn_notification"
+            android:onClick="onNotificationButtonClicked"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/string_btn_notification_action"
+            android:onClick="onNotificationActionButtonClicked"/>
+    </android.support.v7.widget.ButtonBarLayout>
+
+    <android.support.v7.widget.ButtonBarLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/string_btn_notification"
+            android:onClick="onNotificationAction2ButtonClicked"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/string_btn_notification_action"
+            android:onClick="onNotificationAction3ButtonClicked"/>
+    </android.support.v7.widget.ButtonBarLayout>
+
+</LinearLayout>
