FragmntsIntroL1 - responsive images and icons using the plugin

--- a/FragmentsIntroL1/app/src/main/res/layout-xlarge/activity_main.xml
+++ b/FragmentsIntroL1/app/src/main/res/layout-xlarge/activity_main.xml
@@ -1,6 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+        <fragment
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:name="com.exercise.nextu.fragmentsintrol1.ListaDeVErsiones"
+            tools:layout="@layout/lista_de_versiones"/>
+        <fragment
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:name="com.exercise.nextu.fragmentsintrol1.LogoVersiones"
+            tools:layout="@layout/logo_versiones" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+        <fragment
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:name="com.exercise.nextu.fragmentsintrol1.DescripcionVersiones"
+            tools:layout="@layout/descripcion_versiones"/>
+        <fragment
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:name="com.exercise.nextu.fragmentsintrol1.VersionesApi"
+            tools:layout="@layout/versiones_api"/>
+
+    </LinearLayout>
 
 </LinearLayout>
