--- a/AdicionandoFragmentosDinamicos/app/src/main/res/layout/activity_main.xml
+++ b/AdicionandoFragmentosDinamicos/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,23 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.exercise.nextu.adicionandofragmentosdinamicos.MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/btn_mostar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:onClick="onMostrarBtnClicked"
+        android:text="@string/string_btn_mostrar"
+        android:layout_margin="32dp"
+        android:layout_centerHorizontal="true"/>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/btn_mostar"
+        android:id="@+id/frame_container">
+
+    </FrameLayout>
+
 </RelativeLayout>
