--- a/CodingFragmentsViewsL1/app/src/main/res/layout/activity_main.xml
+++ b/CodingFragmentsViewsL1/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -8,10 +8,21 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.exercise.nextu.codingfragmentsviewsl1.MainActivity">
+    tools:context="com.exercise.nextu.codingfragmentsviewsl1.MainActivity"
+    android:background="#f5f5f5"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:text="@string/string_btn_show_content"
+        android:onClick="onBtnShowContentPortraitClicked"/>
+
+    <FrameLayout
+        android:id="@+id/container_frame_layout_portrait"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </FrameLayout>
+
+</LinearLayout>
