--- a/EvaluacionFinal3/app/src/main/res/layout/fragment_details_clasification.xml
+++ b/EvaluacionFinal3/app/src/main/res/layout/fragment_details_clasification.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
 
     <TextView
         android:id="@+id/text_clasification_description"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="@dimen/padding_text_details_content"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,14 +22,14 @@
             <ImageView
                 android:id="@+id/details_image_view_content_1"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/image_view_details_height"
                 android:layout_weight="1"
                 android:src="@drawable/holder_image"
                 style="@style/ImageInstruments"/>
             <ImageView
                 android:id="@+id/details_image_view_content_2"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/image_view_details_height"
                 android:layout_weight="1"
                 android:src="@drawable/holder_image"
                 style="@style/ImageInstruments"/>
