--- a/EvaluacionFinal3/app/src/main/res/values-w820dp/dimens.xml
+++ b/EvaluacionFinal3/app/src/main/res/values-w820dp/dimens.xml
@@ -2,5 +2,15 @@
     <!-- Example customization of dimensions originally defined in res/values/dimens.xml
          (such as screen margins) for screens with more than 820dp of available width. This
          would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively). -->
-    <dimen name="activity_horizontal_margin">64dp</dimen>
+    <dimen name="activity_horizontal_margin">128dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="button_details_favorite_padding_start">32dp</dimen>
+    <dimen name="button_details_play_padding_end">32dp</dimen>
+    <dimen name="button_details_padding">16dp</dimen>
+
+    <dimen name="button_details_favorite_margin_start">32dp</dimen>
+    <dimen name="button_details_play_margin_end">32dp</dimen>
+    <dimen name="button_details_margin">16dp</dimen>
+    <dimen name="padding_text_details_content">32dp</dimen>
+    <dimen name="image_view_details_height">500dp</dimen>
 </resources>
