--- a/EvaluacionFinal3/app/src/main/res/values/dimens.xml
+++ b/EvaluacionFinal3/app/src/main/res/values/dimens.xml
@@ -9,4 +9,6 @@
     <dimen name="button_details_favorite_margin_start">32dp</dimen>
     <dimen name="button_details_play_margin_end">32dp</dimen>
     <dimen name="button_details_margin">16dp</dimen>
+    <dimen name="padding_text_details_content">8dp</dimen>
+    <dimen name="image_view_details_height">300dp</dimen>
 </resources>
