--- a/EvaluacionFinal3/app/src/main/res/values/styles.xml
+++ b/EvaluacionFinal3/app/src/main/res/values/styles.xml
@@ -21,7 +21,7 @@
         <item name="android:layout_marginStart">@dimen/button_details_margin</item>
     </style>
     <style name="ImageInstruments">
-        <item name="android:scaleType">fitCenter</item>
+        <item name="android:scaleType">centerInside</item>
         <item name="android:adjustViewBounds">true</item>
         <item name="android:minHeight">300dp</item>
     </style>
