--- a/EvaluacionFinal3/app/src/main/res/values/styles.xml
+++ b/EvaluacionFinal3/app/src/main/res/values/styles.xml
@@ -21,8 +21,9 @@
         <item name="android:layout_marginStart">@dimen/button_details_margin</item>
     </style>
     <style name="ImageInstruments">
+        <item name="android:layout_marginTop">24dp</item>
         <item name="android:scaleType">centerInside</item>
         <item name="android:adjustViewBounds">true</item>
-        <item name="android:minHeight">300dp</item>
+        <item name="android:minHeight">200dp</item>
     </style>
 </resources>
