--- a/StylesExercises/app/src/main/res/values/colors.xml
+++ b/StylesExercises/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="colorPrimary2">#009688</color>
+    <color name="colorPrimaryDark2">#00796b</color>
+    <color name="colorAccent2">#848484</color>
 </resources>
