--- a/StylesExercises/app/src/main/res/values/styles.xml
+++ b/StylesExercises/app/src/main/res/values/styles.xml
@@ -8,4 +8,21 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme2" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary2</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark2</item>
+        <item name="colorAccent">@color/colorAccent2</item>
+        <item name="android:navigationBarColor">@color/colorPrimary2</item>
+    </style>
+
+    <style name="style_1">
+        <item name="android:textSize">30dp</item>
+        <item name="android:textColor">#00ff00</item>
+    </style>
+
+    <style name="editText">
+        <item name="android:inputType">number</item>
+        <item name="android:textColor">@android:color/holo_blue_dark</item>
+    </style>
 </resources>
