--- a/StylesExercises/app/src/main/res/layout/activity_main.xml
+++ b/StylesExercises/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,23 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.exercise.nextu.stylesexercises.MainActivity">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_layout"
+        android:layout_width="match_parent"
+        android:layout_height="100dp">
+        <TextView
+            android:id="@+id/txt_swipe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Antes de swipe"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <TextView
         style="@style/style_1"
         android:text="Ingresa número"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="106dp"
+        android:layout_marginTop="156dp"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -29,21 +39,21 @@
         android:ems="10"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="43dp"
+        android:layout_marginTop="12dp"
         android:id="@+id/editText" />
 
     <SeekBar
         android:id="@+id/color_seek_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_below="@+id/editText"/>
     <View
         android:id="@+id/color_target_view"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:background="#000000"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_below="@id/color_seek_bar"/>
 
     <Button
