EvaluacionFinal3 - recycler adapter modified

--- a/EvaluacionFinal4/app/src/main/res/layout/activity_main.xml
+++ b/EvaluacionFinal4/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,11 @@
     tools:context="com.example.sergioalejandro.evaluacionfinal4.views.activities.MainActivity">
 
 
-    <com.example.sergioalejandro.evaluacionfinal4.views.custom.Figure
-        android:id="@+id/figure_view"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
