EvFinal4 - application finished

--- a/EvaluacionFinal4/app/src/main/res/layout/activity_figure_draw.xml
+++ b/EvaluacionFinal4/app/src/main/res/layout/activity_figure_draw.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_figure_draw"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.sergioalejandro.evaluacionfinal4.views.activities.FigureDrawActivity">
 
-</RelativeLayout>
+    <com.example.sergioalejandro.evaluacionfinal4.views.custom.Figure
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/view_figure"/>
+</LinearLayout>
