DialogW1M5 - first exercise done

--- a/DialogW1M5/app/src/main/res/values/styles.xml
+++ b/DialogW1M5/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="ThemeDialogAlert" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:colorAccent">@color/colorAccent</item>
+        <item name="android:textColorPrimary">@color/colorDialogText</item>
+        <item name="android:windowBackground">@drawable/background_dialog</item>
+    </style>
 </resources>
