--- a/DialogW1M5/app/src/main/res/layout/activity_main.xml
+++ b/DialogW1M5/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -8,10 +8,16 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.exercises.sart1991.dialogw1m5.MainActivity">
+    tools:context="com.exercises.sart1991.dialogw1m5.MainActivity"
+    android:stretchColumns="*"
+    android:shrinkColumns="*">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+
+    <TableRow
+        android:layout_width="match_parent">
+        <Button
+            android:text="@string/string_btn_main"
+            android:onClick="onClickGenerateAlert"/>
+    </TableRow>
+
+</TableLayout>
