--- a/DialogW1M5/app/src/main/res/layout/activity_main.xml
+++ b/DialogW1M5/app/src/main/res/layout/activity_main.xml
@@ -28,5 +28,10 @@
             android:text="@string/dialogo_lista"
             android:onClick="onClickDialogoLista"/>
     </TableRow>
+    <TableRow>
+        <Button
+            android:text="@string/dialogo_checklist"
+            android:onClick="onClickDialogChecklist"/>
+    </TableRow>
 
 </TableLayout>
