first commit on good practices for toolbar

--- a/ToolbarM6W2L2/app/src/main/res/layout/activity_main.xml
+++ b/ToolbarM6W2L2/app/src/main/res/layout/activity_main.xml
@@ -14,5 +14,12 @@
       android:layout_height="wrap_content"
       android:background="@color/colorPrimary"
       app:titleTextColor="@android:color/white"/>
+  
+  <TextView
+      android:id="@+id/test_text"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_below="@+id/toolbar"
+      android:text="Hola"/>
 
 </RelativeLayout>
