--- a/ExerciseToolbar/app/src/main/res/layout/activity_main.xml
+++ b/ExerciseToolbar/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,13 +7,49 @@
     android:layout_height="match_parent"
     tools:context="com.exercises.sart1991.exercisetoolbar.MainActivity">
   
-  <TextView
-      android:layout_width="wrap_content"
+  <android.support.v7.widget.Toolbar
+      android:id="@+id/toolbar"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:text="Hello World!"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toTopOf="parent"/>
+      android:minHeight="?attr/actionBarSize"
+      app:titleTextColor="@android:color/white"
+      android:background="@color/colorPrimary"/>
+  
+  <ImageView
+      android:id="@+id/person_photo"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/toolbar"
+      android:layout_marginTop="24dp"
+      android:layout_marginBottom="16dp"
+      android:src="@mipmap/ic_launcher"/>
+  
+  <TextView
+      android:id="@+id/person_name"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/person_photo"
+      android:text="@string/person_name"
+      android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+      android:textAlignment="center"/>
+  
+  <TextView
+      android:id="@+id/person_course"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/person_course"
+      android:layout_below="@+id/person_name"
+      android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+      android:textAlignment="center"/>
+  
+  <TextView
+      android:id="@+id/person_age"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/person_age"
+      android:layout_below="@+id/person_course"
+      android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+      android:textAlignment="center"
+      android:layout_marginTop="16dp"/>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
