--- a/GoodPracticesToolbars/app/src/main/res/values/styles.xml
+++ b/GoodPracticesToolbars/app/src/main/res/values/styles.xml
@@ -7,5 +7,14 @@
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     <item name="colorAccent">@color/colorAccent</item>
   </style>
+  
+  <style name="AppTheme.NoActionBar">
+    <item name="windowNoTitle">true</item>
+    <item name="windowActionBar">false</item>
+  </style>
+  
+  <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+  
+  <style name="AppTheme.PopupOverlay" parent="AlertDialog.AppCompat.Light" />
 
 </resources>
