--- a/GoodPracticesToolbars/app/src/main/res/layout/content_main.xml
+++ b/GoodPracticesToolbars/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,10 +7,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
-    tools:showIn="@layout/activity_main">
-  <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Hello World!"/>
+    tools:showIn="@layout/activity_main"
+    android:orientation="vertical"
+    android:padding="16dp">
+    
+    <Button
+        android:id="@+id/btn_teal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/teal"
+        android:textColor="@android:color/white"
+        android:text="@string/btn_apply"
+        android:layout_gravity="center_horizontal"/>
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/btn_lime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/lime"
+        android:textColor="@android:color/white"
+        android:text="@string/btn_apply"
+        android:layout_gravity="center_horizontal"/>
+    
+    <Button
+        android:id="@+id/btn_blue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/blue"
+        android:textColor="@android:color/white"
+        android:text="@string/btn_apply"
+        android:layout_gravity="center_horizontal"/>
+    
+    <Button
+        android:id="@+id/btn_default"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorPrimary"
+        android:textColor="@android:color/white"
+        android:text="@string/btn_default"
+        android:layout_gravity="center_horizontal"/>
+    
+</LinearLayout>
