--- a/GoodPracticesToolbars/app/src/main/res/values/colors.xml
+++ b/GoodPracticesToolbars/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="colorPrimary">#3F51B5</color>
-  <color name="colorPrimaryDark">#303F9F</color>
-  <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
+    
+    <color name="teal">#009688</color>
+    <color name="lime">#CDDC39</color>
+    <color name="blue">#2196F3</color>
+    <color name="teal_dark">#00796B</color>
+    <color name="lime_dark">#AFB42B</color>
+    <color name="blue_dark">#1976D2</color>
 </resources>
