--- a/DotsMenuOptionsCreation/app/src/main/res/layout/content_main.xml
+++ b/DotsMenuOptionsCreation/app/src/main/res/layout/content_main.xml
@@ -9,12 +9,15 @@
     tools:showIn="@layout/activity_main">
     
     <TextView
+        android:id="@+id/txt_hello"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:clickable="true"
+        android:onClick="onHelloClicked"/>
 
 </android.support.constraint.ConstraintLayout>
