--- a/NavigationDrawerIntro/app/src/main/res/layout/activity_main.xml
+++ b/NavigationDrawerIntro/app/src/main/res/layout/activity_main.xml
@@ -16,5 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        android:layout_gravity="start"/>
+        android:layout_gravity="start"
+        app:menu="@menu/drawer_menu_main"
+        app:headerLayout="@layout/nav_header_main"/>
 </android.support.v4.widget.DrawerLayout>
