--- a/NavigationDrawerIntro/app/src/main/res/values/styles.xml
+++ b/NavigationDrawerIntro/app/src/main/res/values/styles.xml
@@ -16,5 +16,10 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     <style name="AppTheme.PopupOverlay" parent="Theme.AppCompat.Light"/>
+    
+    <style name="MyNavigationDrawer" parent="AppTheme">
+        <item name="colorPrimary">@color/colorAccent</item>
+        
+    </style>
 
 </resources>
