--- a/NavigationDrawerIntro/app/src/main/res/layout/activity_main.xml
+++ b/NavigationDrawerIntro/app/src/main/res/layout/activity_main.xml
@@ -18,5 +18,6 @@
         android:fitsSystemWindows="true"
         android:layout_gravity="start"
         app:menu="@menu/drawer_menu_main"
-        app:headerLayout="@layout/nav_header_main"/>
+        app:headerLayout="@layout/nav_header_main"
+        android:theme="@style/MyNavigationDrawer"/>
 </android.support.v4.widget.DrawerLayout>
