--- a/EvaluacionFinal5/app/src/main/res/layout/activity_main.xml
+++ b/EvaluacionFinal5/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
         
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.ActionBarOverlay">
             
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -43,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:menu="@menu/drawer_menu_main"/>
+        app:menu="@menu/drawer_menu_main"
+        android:theme="@style/NavViewTheme"/>
 
 </android.support.v4.widget.DrawerLayout>
