--- a/EvaluacionFinal5/app/src/main/res/layout/activity_main.xml
+++ b/EvaluacionFinal5/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,14 @@
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize" />
+                android:layout_height="?attr/actionBarSize"
+                app:subtitle="@string/_home"/>
             
             <android.support.design.widget.TabLayout
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize" />
+                android:layout_height="?attr/actionBarSize"
+                style="@style/TabLayoutTheme"/>
         
         </android.support.design.widget.AppBarLayout>
         
