--- a/EvaluacionFinal5/app/src/main/res/layout/activity_main.xml
+++ b/EvaluacionFinal5/app/src/main/res/layout/activity_main.xml
@@ -24,20 +24,21 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:subtitle="@string/_home"/>
+                app:popupTheme="@style/AppTheme.PopupOverlay"
+                app:subtitle="@string/_home" />
             
             <android.support.design.widget.TabLayout
                 android:id="@+id/tab_layout"
+                style="@style/TabLayoutTheme"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                style="@style/TabLayoutTheme"/>
+                android:layout_height="?attr/actionBarSize" />
         
         </android.support.design.widget.AppBarLayout>
         
         <android.support.v4.view.ViewPager
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
     
     </LinearLayout>
     
@@ -46,8 +47,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:menu="@menu/drawer_menu_main"
         android:theme="@style/NavViewTheme"
-        app:headerLayout="@layout/nav_drawer_head" />
+        app:headerLayout="@layout/nav_drawer_head"
+        app:menu="@menu/drawer_menu_main" />
 
 </android.support.v4.widget.DrawerLayout>
