--- a/EvaluacionFinal6/app/src/main/res/layout/content_user.xml
+++ b/EvaluacionFinal6/app/src/main/res/layout/content_user.xml
@@ -4,8 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".UserActivity"
-    tools:showIn="@layout/activity_user">
+    tools:showIn="@layout/app_bar_user">
+    
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_card_cars"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/colorBackgroundUser"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
