--- a/EvaluacionFinal6/app/src/main/res/values/dimens.xml
+++ b/EvaluacionFinal6/app/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="img_margin_from">24dp</dimen>
+    <dimen name="margin_to_parent">16dp</dimen>
 </resources>
