--- a/EvaluacionFinal6/app/src/main/res/layout/nav_header_user.xml
+++ b/EvaluacionFinal6/app/src/main/res/layout/nav_header_user.xml
@@ -34,7 +34,7 @@
         android:id="@+id/txt_nav_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/user_email_example"
+        android:text="@string/_email_example"
         app:layout_constraintTop_toBottomOf="@id/txt_nav_user"
         app:layout_constraintLeft_toLeftOf="@id/txt_nav_user"
         android:textColor="@android:color/white"/>
