--- a/EvaluacionFinal6/app/src/main/res/menu/options_menu.xml
+++ b/EvaluacionFinal6/app/src/main/res/menu/options_menu.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    
+    <item
+        android:id="@+id/option_export"
+        android:title="@string/option_title_export" />
+    
     <item
         android:id="@+id/option_logout"
         android:title="@string/_logout" />
