--- a/EvaluacionFinal6/app/src/main/res/layout/cardview_car.xml
+++ b/EvaluacionFinal6/app/src/main/res/layout/cardview_car.xml
@@ -18,7 +18,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:text="@string/_login"
+            android:textAllCaps="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -29,10 +29,9 @@
             android:id="@+id/txt_userId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/txt_carId"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:text="@string/_my_account"/>
+            app:layout_constraintTop_toBottomOf="@id/txt_carId" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
