--- a/EvaluacionFinal6/app/src/main/res/layout/content_main.xml
+++ b/EvaluacionFinal6/app/src/main/res/layout/content_main.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_main"
-    android:fitsSystemWindows="true">
+    tools:showIn="@layout/activity_main">
     
     <TextView
         android:id="@+id/txt_title_content"
@@ -38,7 +38,7 @@
         android:tint="@color/colorAccent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txt_subtitle_content"/>
+        app:layout_constraintTop_toBottomOf="@id/txt_subtitle_content" />
     
     <android.support.design.widget.TextInputLayout
         android:id="@+id/til_username"
@@ -47,14 +47,19 @@
         android:layout_marginLeft="@dimen/margin_to_parent"
         android:layout_marginRight="@dimen/margin_to_parent"
         android:hint="@string/_user_name"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
         
         <EditText
+            android:id="@+id/edit_username"
+            android:nextFocusDown="@+id/edit_password"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:inputType="text"
+            android:maxLines="1"
+            android:imeOptions="actionNext"/>
     </android.support.design.widget.TextInputLayout>
     
     <android.support.design.widget.TextInputLayout
@@ -69,6 +74,7 @@
         app:layout_constraintTop_toBottomOf="@id/til_username">
         
         <EditText
+            android:id="@+id/edit_password"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="textPassword" />
@@ -85,16 +91,16 @@
     
     <Button
         android:id="@+id/btn_login"
-        android:text="@string/_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorAccent"
+        android:onClick="onClickButtonLogin"
+        android:text="@string/_login"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/check_remember"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:backgroundTint="@color/colorAccent"
-        android:textColor="@android:color/white"
-        app:layout_constraintVertical_bias="0.2"
-        android:onClick="onClickButtonLogin"/>
+        app:layout_constraintVertical_bias="0.2" />
 
 </android.support.constraint.ConstraintLayout>
